--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,16 @@ body{
     margin: 0;
       padding: 0;
    box-sizing: border-box;
+   width: 100%;
+  overflow-x: hidden;
 
 }
 .container {
   width: 90%;
   max-width: 1200px;
   margin: auto;
+}
+
+* {
+  box-sizing: border-box;
 }
