--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,30 +1,57 @@
 .packages {
-padding: 40px;
+padding: 20px;
+
 }
-.package-grid {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-gap: 20px;
+
+.packages-grid {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+ 
 }
- h2{
+
+
+.packages h2 {
+  text-align: center;
   font-size: 40px;
-  margin: 5px 0;
-  font-weight: bold;
+  margin-bottom: 30px;
   color: rgb(81, 44, 116);
 }
 .home-page {
   min-height: 100vh;
   padding-bottom: 50px;
 }
-@media (max-width: 768px) {
-  .hero {
-    flex-direction: column;
-    text-align: center;
-  }
+
 
   .hero img,
   .hero-text {
     width: 100%;
   }
+
+  @media (max-width: 768px) {
+
+ 
+  .packages-grid {
+    flex-direction: column;
+    align-items: center;
+  }
+
+ 
+
+  body {
+    overflow-x: hidden;
+  }
+
+ 
+
 }
+
+
+
+
+
+
 
