--- a/src/styles/packagecard.css
+++ b/src/styles/packagecard.css
@@ -1,39 +1,35 @@
 
+.packages-grid {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
 
-.package-card img {
-width: 100%;
-height: 160px;
-object-fit: cover;
-border-radius: 12px;
-display: block;
-  image-rendering: auto;
 }
-.package-card .bottom {
-display: flex;
-justify-content: space-between;
-margin-top: 10px;
-}
+
 .package-card {
   background: #fff;
   padding: 15px;
   border-radius: 16px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   text-align: center;
-  transition: 0.3s;
-  justify-content: space-between;
-  
+  transition: transform 0.3s ease;
+  flex: 1;
+ width:350px;
 }
 
 .package-card:hover {
   transform: translateY(-6px);
 }
+
 .package-card img {
-  width: 100%;
-  height: 150px;
-  object-fit:contain;     
-  border-radius: 10px;
-  margin-bottom: 10px;
+  width: 320px;
+  height: 230px;
+  object-fit: cover;        
+  border-radius: 12px;
+  display: block;
+  image-rendering: auto;
 }
+
 .package-card h3 {
   margin: 12px 0 5px;
   font-size: 20px;
@@ -45,6 +41,7 @@ margin-top: 10px;
   font-size: 14px;
   color: #555;
 }
+
 .package-card span {
   display: inline-block;
   margin-top: 10px;
@@ -52,14 +49,14 @@ margin-top: 10px;
   font-weight: bold;
   color: #26062b;
 }
-.bottom {
+
+.package-card .bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 12px;
 }
-.bottom a:hover {
-  background: #1d4dcc;
-}
+
 .bottom a {
   padding: 8px 16px;
   background: #2f6bed;
@@ -67,5 +64,30 @@ margin-top: 10px;
   text-decoration: none;
   border-radius: 8px;
   font-size: 14px;
-  transition: 0.3s;
+  transition: background 0.3s;
+}
+
+.bottom a:hover {
+  background: #1d4dcc;
+}
+
+@media (max-width: 768px) {
+  .packages-grid {
+    flex-direction: column;  
+    align-items: center;
+  }
+.package-card img {
+  width: 200px;
+  height: 230px;
+  object-fit: cover;        
+  border-radius: 12px;
+  display: block;
+  image-rendering: auto;
+}
+  .package-card {
+    width: 90%;
+    max-width: 380px;
+  }
+
+
 }
