--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,48 +1,74 @@
-.contact-page{
+.contact-wrapper {
+  min-height: calc(100vh - 120px); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #e7edf6;
+  padding: 20px;
+  overflow-x: hidden;
+}
+
+.contact-page {
   align-items: center;
   justify-content: center;
   display: flex;
   flex-direction: column;
- row-gap: 10px;
+  row-gap: 10px;
   padding: 30px;
   box-shadow: 0 0 5px black;
   height: 400px;
   width: 400px;
-   background: #dbe3f0;
-    border-radius: 16px;
-
+  background: #dbe3f0;
+  border-radius: 16px;
+  margin-top: 50px;
 }
-.form{
+
+.form {
   display: flex;
   flex-direction: column;
-  row-gap: 5px;
+  row-gap: 8px;
   align-items: center;
-  width: 400px;
-  
-}
-.form input ,.form textarea{
   width: 100%;
-  padding: 10px;               
-  margin-bottom: 12px;
+}
+
+.form input,
+.form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
   border-radius: 10px;
   border: 2px solid #333;
   font-size: 14px;
-  
 }
- .send-btn{
+
+
+.send-btn {
   padding: 10px 25px;
   font-size: 15px;
   background: #1e90ff;
   color: white;
   border: none;
-  width: auto;             
-  display: inline-block;   
-  cursor: pointer;  
+  cursor: pointer;
+  border-radius: 8px;
 }
-.contact-wrapper {
-  min-height: calc(100vh - 120px); 
-  display: flex;
-  justify-content: center;
-   
-  background: #e7edf6;
+
+
+
+@media (max-width: 600px) {
+
+  .contact-page {
+    width: 100%;        
+    max-width: 360px;
+    height: auto;       
+    padding: 20px;
+    margin-top: 20px;
+  }
+
+  .form {
+    width: 100%;
+  }
+
+  .send-btn {
+    width: 100%;       
+  }
 }
