--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,8 +2,9 @@
   background: white;
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  position: relative;
-  z-index: 1000;
+  position:sticky;
+  z-index:9999
+  
 }
 
 .nav-container {
@@ -16,8 +17,8 @@
 
 
 .logo {
-  font-weight: 600;
-  font-size: 30px;
+  font-weight: 500;
+  font-size: 25px;
   text-decoration: none;
   color: #5a2d82;
 }
@@ -71,6 +72,21 @@
     margin: 15px 0;
     font-size: 18px;
   }
+
   
 }
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+  text-decoration: none;
+  
+}
+
+.logo img {
+  width: 100px;
+  height: 150px;
+  object-fit: contain;
+}
+
 
